--- a/src/data/configuration_3.json
+++ b/src/data/configuration_3.json
@@ -1,5 +1,5 @@
 {
-    "widgetSrc" : "./widget.html",
+    "widgetSrc" : "/widget/widget.html",
     "active": true,
     "call_to_action_image": "https://mir-s3-cdn-cf.behance.net/project_modules/disp/ea7a3c32163929.567197ac70bda.png",
     "call_to_action_text": "👋 Hi, I'm your manager",
