--- a/public/data/configuration_1.json
+++ b/public/data/configuration_1.json
@@ -1,5 +1,5 @@
 {
-    "widgetSrc" : "/widget/widget.html",
+    "widgetSrc" : "https://vite-vanilla-olive.vercel.app/widget/widget.html",
     "active": true,
     "call_to_action_image": "https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg",
     "call_to_action_text": "👋 Hi, I'll keep you in touch",
