--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   },
   "devDependencies": {
     "@rollup/plugin-html": "^1.0.3",
+    "date-fns": "^3.6.0",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "vite": "^5.3.1"
+  },
+  "dependencies": {
+    "date-fns-tz": "^3.1.3"
   }
 }
